# datascience-pa2

./: hello.py  pyproject.toml
docs/: PA2.rar  out.csv
src/: data_preprocessing.py  dt.ipynb  knn.ipynb  nb.ipynb
