[project]
name = "pa2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "missingno>=0.5.2",
    "nbformat>=4.2.0",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pip>=24.2",
]
